--- a/web/css/style.css
+++ b/web/css/style.css
@@ -70,6 +70,9 @@
 42. responsive
 
 */
+body {
+  background-image: url('https://rockiwallpaper.blogspot.com/2020/02/pro-evolution-soccer-wallpaper-hd.html');
+}
 
 .alert {
   padding: 20px;
@@ -230,6 +233,7 @@ h6 {
 .page-wrapper {
   background: #fafafa;
   padding-bottom: 60px;
+  background-image: url('https://rockiwallpaper.blogspot.com/2020/02/pro-evolution-soccer-wallpaper-hd.html');
 }
 .container-fluid {
   padding: 0 30px 25px;
